tests/typecheck/pass/functions.tw
// Test function calls and parameters

fn add(x: Int, y: Int) Int {
    x + y
}

fn greet(name: String) Void {
    println(name)
}

fn main() {
    add(1, 2)
    greet("world")
}
