tests/typecheck/fail/type_mismatch.tw
// Test type mismatch error

fn add(x: Int, y: Int) Int {
    x + "hello"  // Error: can't add Int and String
}
